# programming_learning_repo

./: README.md
CMakeExtension/: CMakeLists.txt  CMakePresets.json  main.cpp
CRTP/: crtp.cpp
GoogleTest/: CMakeLists.txt  hello_test.cpp
PluginTest/: CMakeLists.txt  main.cpp  plugin_api.h  plugin_reverse.cpp  plugin_upper.cpp
